--- a/1.css
+++ b/1.css
@@ -11,10 +11,12 @@ td {
     color: black;
     text-align: center;
     font-size: 20px;
-
     box-shadow: 0 0 8px rgba(0, 0, 0, .7);
 }
 .small{
     height: 60px;
     background-color: #F1F1F1;
+}
+td:hover{
+
 }
